--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>entregable_landing</title>
+     <link href="./styles.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
+ <body>
+   
+    <!--aqui ira el encabezado con los diferentes botones -->
     <header>
+        <!-- usamos el nav para que sean enlaces -->
+        <nav class="encabezado"  >
+           <div class="logo1">PLANET</div>
+           <div class="logo2">SKIN</div>
+           <ul class="encabezado-menu" >
+            <li><a href="#cuidado-facial">Cuidado Facial</a></li>
+            <li><a href="#tipo-piel">Tipo de piel</a></li>
+            <li><a href="#te-preocupa">Te preocupa</a></li>
+            <li><a href="#corporales">Cuidados corporales</a></li>
+            <li><a href="#maquillaje">Maquillaje</a></li>
+            <li><a href="#outlet">Outlet y promociones</a></li>
+            <li><a href="#novedades">Novedades</a></li>
+            <li><a href="#marcas">Marcas</a></li>
+
+
+           </ul>
+           <div class = "idioma ">
+             <button>🇪🇸 Español</button>
+           </div>
+        </nav>
 
     </header>
     <main>
-
+   
     </main>
 
-    <footer>
-        
+    <footer> 
+
     </footer>
+
+</body>
+     <script src="./script.js"></script>
 </body>
 </html>
